[tool.poetry]
name = "liquid-toolkit"
version = "0.1.0"
description = ""
authors = ["Zhen Zhang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.4"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
